# devcert

./: .devcert.toml  .editorconfig  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  compose.yaml  install.sh  nginx.conf
.github/workflows/: quality.yml  release.yml
src/: cli.rs  config.rs  core.rs  log.rs  main.rs  report.rs  system.rs  trust.rs
src/cli/: commands.rs
src/cli/commands/: clean.rs  init.rs  install.rs  uninstall.rs
src/config/: devcert.rs  global.rs  paths.rs  project.rs
src/config/devcert/: ca.rs  registry.rs  trust.rs
src/config/project/: cert.rs
src/core/: ca.rs  cert.rs  trust.rs  utils.rs
src/core/trust/: java.rs  linux.rs  macos.rs  nss.rs  windows.rs
src/system/: checks.rs  component.rs  dir.rs  file.rs
src/trust/: java.rs  linux.rs  macos.rs  nss.rs
