[package]
name = "devcert"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
inquire = "0.9.4"
rcgen = { version = "0.14.7", features = ["pem", "x509-parser"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
time = { version = "0.3.47", features = ["serde-well-known"] }
toml = "1.0.6"
which = "8.0.2"
x509-parser = "0.18.1"
